fix(code-snippet): show bottom overflow indicator

--- a/packages/carbon-web-components/src/components/code-snippet/code-snippet.scss
+++ b/packages/carbon-web-components/src/components/code-snippet/code-snippet.scss
@@ -100,6 +100,7 @@ $css--plex: true !default;
   .#{$prefix}--snippet-container {
     display: flex;
     align-items: start;
+    order: initial;
     overflow: hidden;
     position: relative;
     height: auto;
